terraform_prac/web-ec2-sgs.tf
resource "aws_security_group" "web_sg" {
  name        = "web_sg"
  description = "Allow traffic for web instances on ec2"
  vpc_id      = aws_vpc.my_app.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
